--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<!--My Styles-->
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/format1.css">
 </head>
 
@@ -47,6 +48,12 @@
 
 			<input type="radio" name="format" id="codepen-format" autocomplete="off">
 			<label class="icon-label" for="codepen-format"><i class="fas fa-bars"></i></label>
+
+			<!-- <input type="radio" name="format" id="folder-format" autocomplete="off">
+			<label class="icon-label" for="folder-format"><i class="fas fa-folder"></i></label> -->
+
+			<!-- <input type="radio" name="format" id="squares-format" autocomplete="off">
+			<label class="icon-label" for="squares-format"><i class="fas fa-th-large"></i></label> -->
 		</div>
 	</div>
 
