--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kokomo</title>
 	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
 	<script src="https://kit.fontawesome.com/5978d27576.js" crossorigin="anonymous"></script>
@@ -23,13 +24,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/closetag.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/fold/xml-fold.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/matchtags.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/display/placeholder.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/emmet-codemirror@1.2.5/dist/emmet.min.js"></script>
 	<link rel="stylesheet" href="css/semi.css">
 
 	<!--My Styles-->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/layouts.css">
+	<link rel="stylesheet" href="css/layout-icons.css">
 	<link rel="stylesheet" href="css/animations.css">
 </head>
 
@@ -45,21 +46,30 @@
 		<div class="layout-container">
 			<button class="layout-select">Editor Layout</button>
 			<div class="layout-options">
-				<input type="radio" name="layout" id="layered-layout" autocomplete="off" checked>
-				<label class="layout" for="layered-layout"><img src="img/layered.svg">Layered</label>
+				<input type="radio" name="layout" id="layers-layout" autocomplete="off" checked>
+				<label class="layout" for="layers-layout">
+					<span class="layout-icon layers-icon"><span></span><span></span><span></span></span>
+					Layers
+				</label>
 
-				<input type="radio" name="layout" id="stacked-layout" autocomplete="off">
-				<label class="layout" for="stacked-layout"><img src="img/stacked.svg">Stacked</label>
+				<input type="radio" name="layout" id="stack-layout" autocomplete="off">
+				<label class="layout" for="stack-layout">
+					<span class="layout-icon stack-icon"><span></span><span></span><span></span></span>
+					Stack
+				</label>
 
 				<input type="radio" name="layout" id="boxes-layout" autocomplete="off">
-				<label class="layout" for="boxes-layout"><img src="img/boxes.svg">Boxes</label>
+				<label class="layout" for="boxes-layout">
+					<span class="layout-icon boxes-icon"><span></span><span></span><span></span></span>
+					Boxes
+				</label>
 			</div>
 		</div>
 	</div>
 
 	<div class="editor">
 		<div class="half code-half">
-			<div class="code-container layered">
+			<div class="code-container layers">
 				<!--JS-->
 				<div class="code-box js">
 					<div class="tab">
@@ -70,7 +80,7 @@
 						</div>
 						<span class="tab-title">Javascript</span>
 					</div>
-					<textarea id="js-editor" placeholder="Type your Javascript here..."></textarea>
+					<textarea id="js-editor"></textarea>
 				</div>
 
 				<!--CSS-->
@@ -83,7 +93,7 @@
 						</div>
 						<span class="tab-title">CSS</span>
 					</div>
-					<textarea id="css-editor" placeholder="Type your CSS here..."></textarea>
+					<textarea id="css-editor"></textarea>
 				</div>
 
 				<!--HTML-->
@@ -96,7 +106,7 @@
 						</div>
 						<span class="tab-title">HTML</span>
 					</div>
-					<textarea id="html-editor" placeholder="Type your HTML here..."></textarea>
+					<textarea id="html-editor"></textarea>
 				</div>
 			</div>
 		</div>
