--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/closetag.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/fold/xml-fold.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/matchtags.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/scroll/scrollpastend.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/emmet-codemirror@1.2.5/dist/emmet.min.js"></script>
 	<link rel="stylesheet" href="css/semi.css">
 
@@ -36,10 +37,10 @@
 
 <body>
 	<div class="nav">
-		<div class="logo">KOKOMO EDITOR</div>
+		<div class="logo"><span>K</span>okomo</div>
 
 		<div class="button-container">
-			<button class="button run" onclick="updateResult()">Run</button>
+			<button class="button run">Run</button>
 			<button class="button save">Save</button>
 		</div>
 
@@ -105,6 +106,7 @@
 							<div class="circle"></div>
 						</div>
 						<span class="tab-title">HTML</span>
+						<button class="head-toggle">&lt;head&gt;</button>
 					</div>
 					<textarea id="html-editor"></textarea>
 				</div>
@@ -121,16 +123,36 @@
 						<div class="circle"></div>
 					</div>
 					<span class="tab-title">Result</span>
-					<div class="result-size-container">
+					<div class="resize-toggle-container">
 						<input type="radio" name="devices" id="desktop-size" autocomplete="off" checked>
-						<label class="icon-label" for="desktop-size"><i class="fas fa-expand-arrows-alt"></i></label>
+						<label class="resize-toggle" for="desktop-size">
+							<i class="fas fa-expand-arrows-alt"></i>
+						</label>
 
 						<input type="radio" name="devices" id="mobile-size" autocomplete="off">
-						<label class="icon-label" for="mobile-size"><i class="fas fa-mobile-alt"></i></label>
+						<label class="resize-toggle" for="mobile-size">
+							<i class="fas fa-mobile-alt"></i>
+						</label>
 					</div>
 				</div>
 				<iframe class="result" id="result"></iframe>
 			</div>
+		</div>
+	</div>
+
+	<!--Head-->
+	<div class="head">
+		<div class="tab">
+			<div class="circle-container">
+				<div class="circle"></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
+			</div>
+			<span class="tab-title">Inside Head Tag</span>
+		</div>
+		<div class="head-content">
+			<textarea id="head"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>&#10;</textarea>
+			<button class="button save-and-close">Save and Close</button>
 		</div>
 	</div>
 
