--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://kit.fontawesome.com/5978d27576.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.5.11/split.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css">
-	<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/fonts.css">
 
 	<!--Codemirror-->
@@ -37,7 +37,7 @@
 
 <body>
 	<div class="nav">
-		<div class="logo"><span>K</span>okomo</div>
+		<div class="logo">Kokomo</div>
 
 		<div class="button-container">
 			<button class="button run">Run</button>
