nvm not doing save yet

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 					</div>
 					<span class="tab-title">Result</span>
 					<div class="resize-toggle-container">
-						<input type="radio" name="devices" id="desktop-size" autocomplete="off" checked>
+						<input type="radio" name="result-size" id="desktop-size" autocomplete="off" checked>
 						<label class="resize-toggle" for="desktop-size">
 							<i class="fas fa-expand-arrows-alt"></i>
 						</label>
 
-						<input type="radio" name="devices" id="mobile-size" autocomplete="off">
+						<input type="radio" name="result-size" id="mobile-size" autocomplete="off">
 						<label class="resize-toggle" for="mobile-size">
 							<i class="fas fa-mobile-alt"></i>
 						</label>
