--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<!-- Meta -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Web Editor - Kokomo</title>
+	<title>Kokomo - Web Editor</title>
+	<link rel="icon" type="image/png" href="icons/favicon.png">
 
 	<!-- Fonts -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css">
-	<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css">
 
 	<!-- Codemirror -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.css">
@@ -33,8 +33,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/settings.css">
-	<link rel="stylesheet" href="css/tri-editor/specifics.css">
-	<link rel="stylesheet" href="css/tri-editor/layouts.css">
+	<link rel="stylesheet" href="css/layouts.css">
 
 	<!-- Plugins -->
 	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
@@ -44,11 +43,20 @@
 
 <body>
 	<div class="nav">
-		<img class="logo" src="icons/logo.svg">
+		<div class="general">
+			<img class="logo" src="icons/logo.svg">
+			<span class="info-title">Welcome to Kokomo!</span>
+			<div class="info-dropdown">
+				<span>Kokomo Web Editor</span>
+				<span>Version 1.0.0</span>
+				<span>Made by <a class="funky-link" href="https://github.com/semishawn"><i class="fab fa-github-alt" style="margin-right: 5px;"></i>semishawn</a>
+				</span>
+			</div>
+		</div>
 
 		<div class="primary-functions-container">
 			<button class="funky-button run"><i class="fas fa-running"></i>Run</button>
-			<button class="funky-button save"><i class="far fa-save"></i>Save</button>
+			<button class="funky-button save"><div class="save-icon"><i class="far fa-save"></i></div>Save</button>
 		</div>
 
 		<div class="settings">
@@ -146,6 +154,16 @@
 					</div>
 				</div>
 				<iframe class="result" id="result"></iframe>
+				<div class="result-zoom-container">
+					<input type="radio" name="result-zoom" id="100-percent" autocomplete="off" checked>
+					<label class="zoom-toggle" for="100-percent">1.0x</label>
+
+					<input type="radio" name="result-zoom" id="200-percent" autocomplete="off">
+					<label class="zoom-toggle" for="200-percent">2.0x</label>
+
+					<input type="radio" name="result-zoom" id="300-percent" autocomplete="off">
+					<label class="zoom-toggle" for="300-percent">3.0x</label>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -158,8 +176,8 @@
 			<span class="tab-title iconless-tab-title">HTML Configuration</span>
 		</div>
 		<div class="config-content">
-			<span>Inside head tag:</span>
-			<textarea id="head"><meta charset="UTF-8">&#10;<meta name="viewport" content="width=device-width, initial-scale=1">&#10;</textarea>
+			<span>Custom Metadata/Stylesheets:</span>
+			<textarea id="head"></textarea>
 			<div class="preset-container metadata-presets">
 				<button class="preset" id="charset-preset"><i class="fas fa-plus"></i>Common charset</button>
 				<button class="preset" id="viewport-preset"><i class="fas fa-plus"></i>Common viewport</button>
@@ -174,19 +192,21 @@
 			<span class="tab-title iconless-tab-title">Javascript Configuration</span>
 		</div>
 		<div class="config-content">
-			<span>Extra plugins:</span>
+			<span>Custom plugins:</span>
 			<textarea id="plugins"></textarea>
 			<div class="preset-container plugin-presets">
 				<button class="preset" id="jquery-preset"><i class="fas fa-plus"></i>jQuery</button>
 				<button class="preset" id="react-preset"><i class="fas fa-plus"></i>React</button>
 				<button class="preset" id="angular-preset"><i class="fas fa-plus"></i>Angular</button>
 				<button class="preset" id="vue-preset"><i class="fas fa-plus"></i>Vue</button>
+				<button class="preset" id="bootstrap-preset"><i class="fas fa-plus"></i>Bootstrap</button>
 			</div>
 			<button class="funky-button save-close">Save & Close</button>
 		</div>
 	</div>
 
-	<script src="js/tri-editor.js"></script>
+	<script src="js/codemirror.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
