--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<span class="tab-title iconless-tab-title">Javascript Configuration</span>
 		</div>
 		<div class="config-content">
-			<span>Custom plugins:</span>
+			<span>Custom Plugins:</span>
 			<textarea id="plugins"></textarea>
 			<div class="preset-container plugin-presets">
 				<button class="preset" id="jquery-preset"><i class="fas fa-plus"></i>jQuery</button>
