--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
 				<div class="result-zoom-container">
 					<i class="fas fa-search-plus"></i>
 
-					<input type="radio" name="result-zoom" id="100-percent" autocomplete="off" checked>
-					<label class="zoom-toggle" for="100-percent">1x</label>
+					<input type="radio" name="result-zoom" id="zoom1" autocomplete="off" checked>
+					<label class="zoom-toggle" for="zoom1">1x</label>
 
-					<input type="radio" name="result-zoom" id="200-percent" autocomplete="off">
-					<label class="zoom-toggle" for="200-percent">2x</label>
+					<input type="radio" name="result-zoom" id="zoom2" autocomplete="off">
+					<label class="zoom-toggle" for="zoom2">2x</label>
 
-					<input type="radio" name="result-zoom" id="300-percent" autocomplete="off">
-					<label class="zoom-toggle" for="300-percent">3x</label>
+					<input type="radio" name="result-zoom" id="zoom3" autocomplete="off">
+					<label class="zoom-toggle" for="zoom3">3x</label>
 				</div>
 			</div>
 		</div>
@@ -211,7 +211,7 @@
 	</div>
 
 	<script src="js/codemirror.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/web.js"></script>
 </body>
 
 </html>
