--- a/index.html
+++ b/index.html
@@ -1,217 +1,73 @@
+---
+---
+
 <!DOCTYPE html>
 <html>
 
 <head>
-	<!-- Meta -->
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Kokomo - Web Editor</title>
-	<link rel="icon" type="image/png" href="icons/favicon.png">
+	{% include head.html %}
 
-	<!-- Fonts -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css">
+	<style>
+		body {
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			background: linear-gradient(135deg, #C6FFDD, #FBD786, #f7797d);
+		}
 
-	<!-- Codemirror -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/mode/xml/xml.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/mode/javascript/javascript.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/mode/css/css.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/mode/htmlmixed/htmlmixed.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/matchbrackets.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/closebrackets.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/closetag.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/fold/xml-fold.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/edit/matchtags.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/scroll/scrollpastend.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.59.2/addon/display/autorefresh.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/emmet-codemirror@1.2.5/dist/emmet.min.js"></script>
-	<link rel="stylesheet" href="css/kokomo-syntax.css">
+		.editor-btn {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			height: 20%;
+			width: 20%;
+			margin: 10px;
+			border-radius: var(--main-radius);
+			color: grey;
+			background: linear-gradient(var(--tab-gradient));
+			box-shadow: var(--main-shadow);
+			text-decoration: none;
+			transition: all 0.1s;
+		}
+		.editor-btn:hover {transform: scale(1.03);}
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/colors.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/animations.css">
-	<link rel="stylesheet" href="css/settings.css">
-	<link rel="stylesheet" href="css/layouts.css">
+		.editor-img-container {
+			height: 40%;
+			margin-bottom: 10px;
+		}
 
-	<!-- Plugins -->
-	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
-	<script src="https://kit.fontawesome.com/5978d27576.js" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.5.11/split.min.js"></script>
+		.editor-btn img {height: 100%;}
+	</style>
 </head>
 
-<body class="web-body">
-	<div class="nav">
-		<div class="info-container">
-			<img class="logo" src="icons/logo.svg">
-			<span class="info-title">Welcome to Kokomo!</span>
-			<div class="info-dropdown">
-				<span>Kokomo Web Editor</span>
-				<span>Version 1.0.0</span>
-				<span>Made by <a class="funky-link" href="https://github.com/semishawn"><i class="fab fa-github-alt" style="margin-right: 5px;"></i>semishawn</a>
-				</span>
-				<span>Try out the <a class="funky-link" href="html">HTML Editor</a></span>
-			</div>
+<body>
+	<a class="editor-btn" href="editors/web">
+		<div class="editor-img-container">
+			<img src="icons/languages/html.svg">
+			<img src="icons/languages/css.svg">
+			<img src="icons/languages/js.svg">
 		</div>
-
-		<div class="primary-functions-container">
-			<button class="funky-button run"><i class="fas fa-running"></i>Run</button>
-			<button class="funky-button save"><div class="save-icon"><i class="far fa-save"></i></div>Save</button>
+		Web Editor
+	</a>
+	<a class="editor-btn" href="editors/html">
+		<div class="editor-img-container">
+			<img src="icons/languages/html.svg">
 		</div>
-
-		<div class="settings">
-			<button class="funky-button settings-select"><i class="fas fa-cog"></i>Settings</button>
-			<div class="settings-dropdown">
-				<div class="options layout-options">
-					<input type="radio" name="layout" id="layers-layout" autocomplete="off" checked>
-					<label class="layout" for="layers-layout">
-						<span class="layout-icon layers-icon"><span></span><span></span><span></span></span>
-						Layers
-					</label>
-
-					<input type="radio" name="layout" id="stack-layout" autocomplete="off">
-					<label class="layout" for="stack-layout">
-						<span class="layout-icon stack-icon"><span></span><span></span><span></span></span>
-						Stack
-					</label>
-
-					<input type="radio" name="layout" id="boxes-layout" autocomplete="off">
-					<label class="layout" for="boxes-layout">
-						<span class="layout-icon boxes-icon"><span></span><span></span><span></span></span>
-						Boxes
-					</label>
-				</div>
-
-				<div class="separator"></div>
-
-				<div class="options editor-options">
-					<div class="editor-toggle">
-						<input id="line-wrapping" type="checkbox" autocomplete="off" checked>
-						<label class="flip-button" for="line-wrapping" data-yes="Yeah" data-no="Nope"></label>
-						<span>Line Wrapping</span>
-					</div>
-					<div class="editor-toggle">
-						<input id="line-numbers" type="checkbox" autocomplete="off" checked>
-						<label class="flip-button" for="line-numbers" data-yes="Yeah" data-no="Nope"></label>
-						<span>Line Numbers</span>
-					</div>
-				</div>
-			</div>
+		HTML Editor
+	</a>
+	<a class="editor-btn" href="editors/lolcode">
+		<div class="editor-img-container">
+			<img src="icons/languages/lol.png">
 		</div>
-	</div>
-
-	<div class="editor">
-		<div class="half code-half">
-
-			<div class="box-cycler"><i class="fas fa-sync-alt"></i>Cycle Editors</div>
-
-			<div class="code-container layers">
-				<!-- JS -->
-				<div class="code-box js">
-					<div class="tab">
-						<img class="lang-icon" src="icons/languages/js.svg">
-						<span class="tab-title">Javascript</span>
-						<button class="config-button"><i class="fas fa-tools"></i></button>
-					</div>
-					<textarea id="js-editor"></textarea>
-				</div>
-
-				<!-- CSS -->
-				<div class="code-box css">
-					<div class="tab">
-						<img class="lang-icon" src="icons/languages/css.svg">
-						<span class="tab-title">CSS</span>
-					</div>
-					<textarea id="css-editor"></textarea>
-				</div>
-
-				<!-- HTML -->
-				<div class="code-box html">
-					<div class="tab">
-						<img class="lang-icon" src="icons/languages/html.svg">
-						<span class="tab-title">HTML</span>
-						<button class="config-button"><i class="fas fa-tools"></i></button>
-					</div>
-					<textarea id="html-editor"></textarea>
-				</div>
-			</div>
+		LOLCODE Editor
+	</a>
+	<a class="editor-btn" href="editors/lolcode">
+		<div class="editor-img-container">
+			<img src="icons/languages/bf.png">
 		</div>
-
-		<!-- Result -->
-		<div class="half result-half">
-			<div class="result-container desktop-result">
-				<div class="tab">
-					<span class="tab-title iconless-tab-title">Result</span>
-					<div class="result-buttons">
-						<a class="export-button disabled" download="KokomoExport.html"><i class="fas fa-download"></i>Export</a>
-						<div class="resize-toggle-container">
-							<input type="radio" name="result-size" id="desktop-size" autocomplete="off" checked>
-							<label class="resize-toggle" for="desktop-size"><i class="fas fa-expand"></i></label>
-
-							<input type="radio" name="result-size" id="mobile-size" autocomplete="off">
-							<label class="resize-toggle" for="mobile-size"><i class="fas fa-mobile-alt"></i></label>
-						</div>
-					</div>
-				</div>
-				<iframe id="result"></iframe>
-				<div class="result-zoom-container">
-					<i class="fas fa-search-plus"></i>
-
-					<input type="radio" name="result-zoom" id="zoom1" autocomplete="off" checked>
-					<label class="zoom-toggle" for="zoom1">1x</label>
-
-					<input type="radio" name="result-zoom" id="zoom2" autocomplete="off">
-					<label class="zoom-toggle" for="zoom2">2x</label>
-
-					<input type="radio" name="result-zoom" id="zoom3" autocomplete="off">
-					<label class="zoom-toggle" for="zoom3">3x</label>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="body-block"></div>
-
-	<!-- HTML Configuration -->
-	<div class="config-dialogue html-config">
-		<div class="tab">
-			<span class="tab-title iconless-tab-title">HTML Configuration</span>
-		</div>
-		<div class="config-content">
-			<span>Custom Metadata/Stylesheets:</span>
-			<textarea id="head"></textarea>
-			<div class="preset-container metadata-presets">
-				<button class="preset" id="charset-preset"><i class="fas fa-plus"></i>Common charset</button>
-				<button class="preset" id="viewport-preset"><i class="fas fa-plus"></i>Common viewport</button>
-			</div>
-			<button class="funky-button save-close">Save & Close</button>
-		</div>
-	</div>
-
-	<!-- JS Configuration -->
-	<div class="config-dialogue js-config">
-		<div class="tab">
-			<span class="tab-title iconless-tab-title">Javascript Configuration</span>
-		</div>
-		<div class="config-content">
-			<span>Custom Plugins:</span>
-			<textarea id="plugins"></textarea>
-			<div class="preset-container plugin-presets">
-				<button class="preset" id="jquery-preset"><i class="fas fa-plus"></i>jQuery</button>
-				<button class="preset" id="react-preset"><i class="fas fa-plus"></i>React</button>
-				<button class="preset" id="angular-preset"><i class="fas fa-plus"></i>Angular</button>
-				<button class="preset" id="vue-preset"><i class="fas fa-plus"></i>Vue</button>
-				<button class="preset" id="bootstrap-preset"><i class="fas fa-plus"></i>Bootstrap</button>
-			</div>
-			<button class="funky-button save-close">Save & Close</button>
-		</div>
-	</div>
-
-	<script src="js/codemirror.js"></script>
-	<script src="js/web.js"></script>
+		Befunge Editor
+	</a>
 </body>
 
 </html>
