--- a/editors/befunge.html
+++ b/editors/befunge.html
@@ -11,7 +11,7 @@ version: 1.0.0
 
 <head>
 	{% include head.html %}
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.0/mode/javascript/javascript.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.1/addon/mode/simple.min.js"></script>
 
 	<style>
 		:root {--gradient: #67B26F, #4ca2cd;}
@@ -27,9 +27,21 @@ version: 1.0.0
 			<div class="code-box">
 				<div class="tab">
 					<img class="lang-icon" src="{{ site.baseurl }}/icons/languages/{{ page.extension }}.png">
+
 					<span class="tab-title">{{ page.title }}</span>
+
+					<div class="result-btn-container">
+						<button class="tab-btn samples-btn"><i class="fas fa-caret-down"></i>Sample Programs</button>
+					</div>
 				</div>
 				<textarea id="{{ page.extension }}-editor"></textarea>
+				<div class="samples-dropdown">
+					<div class="sample-option" data-sample="commas">Hello World with excessive commas</div>
+					<div class="sample-option" data-sample="loop">Hello World with comma loop</div>
+					<div class="sample-option" data-sample="trampoline">Hello World with trampoline</div>
+					<div class="sample-option" data-sample="random3">Random number from 1-3</div>
+					<div class="sample-option" data-sample="random5">Random number from 1-5</div>
+				</div>
 			</div>
 		</div>
 
@@ -38,7 +50,7 @@ version: 1.0.0
 				<div class="tab">
 					<span class="tab-title iconless-tab-title">Console</span>
 					<div class="result-btn-container">
-						<button class="tab-btn console-clear-btn"><i class="fas fa-trash-alt"></i>Clear Console</button>
+						<button class="tab-btn console-clear-btn"><i class="far fa-trash-alt"></i>Clear Console</button>
 					</div>
 				</div>
 				<div id="console"></div>
@@ -47,10 +59,11 @@ version: 1.0.0
 	</div>
 
 	<script src="{{ site.baseurl }}/js/main.js"></script>
+	<script src="{{ site.baseurl }}/js/befunge.js"></script>
 	<script>
 		// CodeMirror
 		var {{ page.extension }} = CodeMirror.fromTextArea(document.getElementById("{{ page.extension }}-editor"), {
-			mode: "text/javascript",
+			mode: "befunge",
 			theme: "kokomo-syntax",
 			lineWrapping: true,
 			lineNumbers: true,
@@ -61,6 +74,52 @@ version: 1.0.0
 			indentUnit: 4,
 			indentWithTabs: true,
 			autoRefresh: true
+		});
+
+
+
+		// Specific samples
+		$(".sample-option").click(function() {
+			var sample = $(this).attr("data-sample");
+			switch (sample) {
+				case "commas":
+					sampleCode = `\"dlrow olleH\" ,,,,,,,,,,, @`;
+					break;
+				case "loop":
+					sampleCode = `v
+
+                  v  ,  <
+
+>   \"dlrow olleH\" >  :  |
+
+                        @`;
+					break;
+				case "trampoline":
+					sampleCode = `"dlrow olleH">:#,_@`;
+					break;
+				case "":
+					sampleCode = `
+
+					`;
+					break;
+				case "random3":
+					sampleCode = `v
+
+  >   v
+  1
+> ? 2 > .@
+  3
+  >   ^`;
+					break;
+				case "random5":
+					sampleCode = `1 > v > v > v > v
+> ? > ? > ? > ? > v
+  1 + 1 + 1 + 1 + .
+  > ^ > ^ > ^ > ^ @`;
+					break;
+			}
+			sampleCode.substring(1);
+			{{ page.extension }}.setValue(sampleCode);
 		});
 	</script>
 	{% include run-js.html %}
