--- a/editors/lolcode.html
+++ b/editors/lolcode.html
@@ -10,7 +10,7 @@ version: 1.0.0
 
 <head>
 	{% include head.html %}
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.0/mode/javascript/javascript.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.63.1/addon/mode/simple.min.js"></script>
 
 	<style>
 		:root {--gradient: #F4E2D8, #BA5370;}
@@ -26,9 +26,19 @@ version: 1.0.0
 			<div class="code-box">
 				<div class="tab">
 					<img class="lang-icon" src="{{ site.baseurl }}/icons/languages/{{ page.extension }}.png">
+
 					<span class="tab-title">{{ page.title }}</span>
+
+					<div class="result-btn-container">
+						<button class="tab-btn samples-btn"><i class="fas fa-caret-down"></i>Sample Programs</button>
+					</div>
 				</div>
 				<textarea id="{{ page.extension }}-editor"></textarea>
+				<div class="samples-dropdown">
+					<div class="sample-option" data-sample="visible">Hello World</div>
+					<div class="sample-option" data-sample="increment">Count 1-10</div>
+					<div class="sample-option" data-sample="exponent">Calculate Exponent</div>
+				</div>
 			</div>
 		</div>
 
@@ -37,7 +47,7 @@ version: 1.0.0
 				<div class="tab">
 					<span class="tab-title iconless-tab-title">Console</span>
 					<div class="result-btn-container">
-						<button class="tab-btn console-clear-btn"><i class="fas fa-trash-alt"></i>Clear Console</button>
+						<button class="tab-btn console-clear-btn"><i class="far fa-trash-alt"></i>Clear Console</button>
 					</div>
 				</div>
 				<div id="console"></div>
@@ -46,10 +56,11 @@ version: 1.0.0
 	</div>
 
 	<script src="{{ site.baseurl }}/js/main.js"></script>
+	<script src="{{ site.baseurl }}/js/lolcode.js"></script>
 	<script>
 		// CodeMirror
 		var {{ page.extension }} = CodeMirror.fromTextArea(document.getElementById("{{ page.extension }}-editor"), {
-			mode: "text/javascript",
+			mode: "lolcode",
 			theme: "kokomo-syntax",
 			lineWrapping: true,
 			lineNumbers: true,
@@ -61,6 +72,46 @@ version: 1.0.0
 			indentWithTabs: true,
 			scrollPastEnd: true,
 			autoRefresh: true
+		});
+
+
+
+		// Specific samples
+		$(".sample-option").click(function() {
+			var sample = $(this).attr("data-sample");
+			switch (sample) {
+				case "visible":
+					sampleCode = `HAI 1.3
+	VISIBLE \"Hello world!\"
+KTHXBYE`;
+					break;
+				case "increment":
+					sampleCode = `HAI 1.3
+	I HAS A var ITZ 0
+	IM IN YR loop UPPIN YR var TIL BOTH SAEM var AN 10
+		VISIBLE SUM OF var AN 1
+	IM OUTTA YR loop
+KTHXBYE`;
+					break;
+				case "exponent":
+					sampleCode = `HAI 1.3
+	HOW IZ I exponentFunction YR base AN YR exp
+		I HAS A index ITZ 0
+		I HAS A total ITZ 1
+
+		IM IN YR loop UPPIN YR index TIL BOTH SAEM index AN exp
+			total R PRODUKT OF total AN base
+		IM OUTTA YR loop
+
+		FOUND YR total
+	IF U SAY SO
+		
+	VISIBLE I IZ exponentFunction YR 2 AN YR 4 MKAY
+KTHXBYE`;
+					break;
+			}
+			sampleCode.substring(1);
+			{{ page.extension }}.setValue(sampleCode);
 		});
 	</script>
 	{% include run-js.html %}
