--- a/editors/befunge.html
+++ b/editors/befunge.html
@@ -112,10 +112,10 @@ version: 1.0.0
   >   ^`;
 					break;
 				case "random5":
-					sampleCode = `1 > v > v > v > v
-> ? > ? > ? > ? > v
-  1 + 1 + 1 + 1 + .
-  > ^ > ^ > ^ > ^ @`;
+					sampleCode = `1 v > v > v > v > v
+  > ? > ? > ? > ? > .@
+    1 + 1 + 1 + 1 +
+    > ^ > ^ > ^ > ^`;
 					break;
 			}
 			sampleCode.substring(1);
