--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-	<a class="editor-btn" href="editors/web">
+	<a class="editor-btn" href="editors/web.html">
 		<div class="editor-img-container">
 			<img src="icons/languages/html.svg">
 			<img src="icons/languages/css.svg">
@@ -50,19 +50,19 @@
 		</div>
 		Web Editor
 	</a>
-	<a class="editor-btn" href="editors/html">
+	<a class="editor-btn" href="editors/html.html">
 		<div class="editor-img-container">
 			<img src="icons/languages/html.svg">
 		</div>
 		HTML Editor
 	</a>
-	<a class="editor-btn" href="editors/lolcode">
+	<a class="editor-btn" href="editors/lolcode.html">
 		<div class="editor-img-container">
 			<img src="icons/languages/lol.png">
 		</div>
 		LOLCODE Editor
 	</a>
-	<a class="editor-btn" href="editors/lolcode">
+	<a class="editor-btn" href="editors/befunge.html">
 		<div class="editor-img-container">
 			<img src="icons/languages/bf.png">
 		</div>
