--- a/editors/befunge.html
+++ b/editors/befunge.html
@@ -41,6 +41,7 @@ version: 1.0.0
 					<div class="sample-option" data-sample="trampoline">Hello World with trampoline</div>
 					<div class="sample-option" data-sample="random3">Random number from 1-3</div>
 					<div class="sample-option" data-sample="random5">Random number from 1-5</div>
+					<div class="sample-option" data-sample="pi">Generate 100 digits of pi</div>
 				</div>
 			</div>
 		</div>
@@ -117,6 +118,10 @@ version: 1.0.0
     1 + 1 + 1 + 1 +
     > ^ > ^ > ^ > ^`;
 					break;
+				case "pi":
+					sampleCode = `"^a&EPm=kY}t/qYC+i9wHye$m N@~x+"v
+"|DsY<"-"z6n<[Yo2x|UP5VD:">:#v_@>
+-:19+/"0"+,19+%"0"+,      ^  >39*`;
 			}
 			sampleCode.substring(1);
 			{{ page.extension }}.setValue(sampleCode);
